fix: background image alignment

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
 }
 #bgImg {
   object-fit: cover;
+  width: 100%;
+  max-height: 1000px;
+  display: block;
+  margin: auto;
 }
 .lgContainer {
   display: flex;
@@ -26,7 +30,6 @@ body {
   padding: 2% 4% 3%;
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
-  border-radius: 20px;
 }
 h1 {
   font-size: 2.5rem;
@@ -127,17 +130,15 @@ button {
   h1 {
     font-size: 2.2rem;
   }
-  #bgImg {
-    width: 720px;
-    height: 800px;
-  }
   .lgContainer {
     height: 750px;
-    width: 720px;
   }
   .container {
+    left: 0%;
+    right: 0%;
     height: 100%;
     margin: 0;
+    border-radius: 0;
     padding: 1rem auto;
   }
 
@@ -232,13 +233,8 @@ button {
   h1 {
     font-size: 2.2rem;
   }
-  #bgImg {
-    width: 520px;
-    height: 800px;
-  }
   .lgContainer {
     height: 770px;
-    width: 520px;
   }
   .container {
     left: 0%;
